<?xml version="1.0"?>
<package>
  <name>tams_tracker_launch</name>
  <version>0.0.0</version>
  <description>-</description>

  <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
  <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>

  <license>-</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tams_tracker_node</build_depend>
  <run_depend>tams_tracker_node</run_depend>
</package>
